@@ -17,11 +17,11 @@
 package samples.powermockito.junit4.simplemix;
 
 import static org.junit.Assert.assertEquals;
-import static org.mockito.Mockito.when;
 import static org.powermock.api.mockito.PowerMockito.mock;
-import static org.powermock.api.mockito.PowerMockito.mockPartial;
 import static org.powermock.api.mockito.PowerMockito.mockStatic;
+import static org.powermock.api.mockito.PowerMockito.spy;
 import static org.powermock.api.mockito.PowerMockito.verifyStatic;
+import static org.powermock.api.mockito.PowerMockito.when;
 
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -44,33 +44,34 @@ import samples.simplemix.SimpleMixUtilities;
 @PowerMockListener(FieldDefaulter.class)
 public class SimpleMixTest {
 
-    @PrepareForTest( { SimpleMixUtilities.class, SimpleMixCollaborator.class, SimpleMix.class })
-    @Test
-    public void staticPartialFinalMocking() throws Exception {
-        SimpleMix tested = mockPartial(SimpleMix.class, "getValue");
+	@PrepareForTest( { SimpleMixUtilities.class, SimpleMixCollaborator.class, SimpleMix.class })
+	@Test
+	public void staticPartialFinalMocking() throws Exception {
+		SimpleMix tested = spy(new SimpleMix());
 
-        SimpleMixCollaborator simpleMixCollaboratorMock = mock(SimpleMixCollaborator.class);
-        mockStatic(SimpleMixUtilities.class);
+		when(tested, "getValue").thenReturn(0);
+		SimpleMixCollaborator simpleMixCollaboratorMock = mock(SimpleMixCollaborator.class);
+		mockStatic(SimpleMixUtilities.class);
 
-        Whitebox.setInternalState(tested, simpleMixCollaboratorMock);
+		Whitebox.setInternalState(tested, simpleMixCollaboratorMock);
 
-        when(SimpleMixUtilities.getRandomInteger()).thenReturn(10);
-        when(simpleMixCollaboratorMock.getRandomInteger()).thenReturn(6);
+		when(SimpleMixUtilities.getRandomInteger()).thenReturn(10);
+		when(simpleMixCollaboratorMock.getRandomInteger()).thenReturn(6);
 
-        assertEquals(4, tested.calculate());
+		assertEquals(4, tested.calculate());
 
-        verifyStatic(SimpleMixUtilities.class);
-        SimpleMixUtilities.getRandomInteger();
-    }
+		verifyStatic(SimpleMixUtilities.class);
+		SimpleMixUtilities.getRandomInteger();
+	}
 
-    @PrepareForTest( { SimpleMix.class, SimpleMixTest.class })
-    @Test
-    public void finalSystemClassMocking() throws Exception {
-        SimpleMix tested = new SimpleMix();
-        mockStatic(System.class);
+	@PrepareForTest( { SimpleMix.class, SimpleMixTest.class })
+	@Test
+	public void finalSystemClassMocking() throws Exception {
+		SimpleMix tested = new SimpleMix();
+		mockStatic(System.class);
 
-        when(System.currentTimeMillis()).thenReturn(2000L);
+		when(System.currentTimeMillis()).thenReturn(2000L);
 
-        assertEquals(2, Whitebox.invokeMethod(tested, "getValue"));
-    }
+		assertEquals(2, Whitebox.invokeMethod(tested, "getValue"));
+	}
 }
